--- a/manifest.json
+++ b/manifest.json
@@ -16,6 +16,6 @@
     "start_url": "/",
     "display": "standalone",
     "background_color": "#ffffff",
-    "theme_color": "#000000"
+    "theme_color": "#9EE8FF"
   }
   
